@@ -1,3 +1,7 @@
+2005-05-29  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/oraconf.rb: change the detection logic for Multiple
+	  Oracle Homes on Windows.
+
 2005-05-24  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oraconf.rb: use "-L#{@oracle_home}/lib(32) -lclntsh" as
 	   a last resort.
